{
  "version": 4,
  "terraform_version": "1.4.3",
  "serial": 97,
  "lineage": "0c24d177-bbce-8be8-70ab-7216bdc23915",
  "resources": [
    {
      "mode": "data",
      "type": "azurerm_public_ip",
      "name": "aziz-ip-data",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/8d068e1b-3c9f-49a7-bd9e-7972ea899d96/resourceGroups/aziz-resources/providers/Microsoft.Network/publicIPAddresses/aziz-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.124.245.147",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "aziz-ip",
            "resource_group_name": "aziz-resources",
            "sku": "Basic",
            "tags": {
              "environment": "dev"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_interface",
      "name": "aziz-nic",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_accelerated_networking": false,
            "enable_ip_forwarding": false,
            "id": "/subscriptions/8d068e1b-3c9f-49a7-bd9e-7972ea899d96/resourceGroups/aziz-resources/providers/Microsoft.Network/networkInterfaces/aziz-nic",
            "internal_domain_name_suffix": "ztd3d54q5u4ehfsshjvax5gejc.ax.internal.cloudapp.net",
            "ip_configuration": [
              {
                "name": "internal",
                "primary": true,
                "private_ip_address": "10.123.1.4",
                "private_ip_address_allocation": "Dynamic",
                "private_ip_address_version": "IPv4",
                "public_ip_address_id": "/subscriptions/8d068e1b-3c9f-49a7-bd9e-7972ea899d96/resourceGroups/aziz-resources/providers/Microsoft.Network/publicIPAddresses/aziz-ip",
                "subnet_id": "/subscriptions/8d068e1b-3c9f-49a7-bd9e-7972ea899d96/resourceGroups/aziz-resources/providers/Microsoft.Network/virtualNetworks/aziz-network/subnets/aziz-subnet"
              }
            ],
            "location": "westeurope",
            "mac_address": "00-22-48-86-2F-65",
            "name": "aziz-nic",
            "private_ip_address": "10.123.1.4",
            "private_ip_addresses": [
              "10.123.1.4"
            ],
            "resource_group_name": "aziz-resources",
            "tags": {
              "environment": "dev"
            },
            "virtual_machine_id": "/subscriptions/8d068e1b-3c9f-49a7-bd9e-7972ea899d96/resourceGroups/aziz-resources/providers/Microsoft.Compute/virtualMachines/aziz-vm"
          },
          "dependencies": [
            "azurerm_public_ip.aziz-ip",
            "azurerm_resource_group.aziz-rg",
            "azurerm_subnet.aziz-subnet",
            "azurerm_virtual_network.aziz-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "aziz-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8d068e1b-3c9f-49a7-bd9e-7972ea899d96/resourceGroups/aziz-resources/providers/Microsoft.Network/networkSecurityGroups/aziz-sg",
            "location": "westeurope",
            "name": "aziz-sg",
            "resource_group_name": "aziz-resources",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "aziz-dev-rule",
                "priority": 100,
                "protocol": "*",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {
              "environment": "dev"
            },
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_resource_group.aziz-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_rule",
      "name": "aziz-dev-rule",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access": "Allow",
            "description": "",
            "destination_address_prefix": "*",
            "destination_address_prefixes": [],
            "destination_application_security_group_ids": [],
            "destination_port_range": "*",
            "destination_port_ranges": [],
            "direction": "Inbound",
            "id": "/subscriptions/8d068e1b-3c9f-49a7-bd9e-7972ea899d96/resourceGroups/aziz-resources/providers/Microsoft.Network/networkSecurityGroups/aziz-sg/securityRules/aziz-dev-rule",
            "name": "aziz-dev-rule",
            "network_security_group_name": "aziz-sg",
            "priority": 100,
            "protocol": "*",
            "resource_group_name": "aziz-resources",
            "source_address_prefix": "*",
            "source_address_prefixes": [],
            "source_application_security_group_ids": [],
            "source_port_range": "*",
            "source_port_ranges": [],
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "azurerm_network_security_group.aziz-sg",
            "azurerm_resource_group.aziz-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_public_ip",
      "name": "aziz-ip",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_method": "Dynamic",
            "id": "/subscriptions/8d068e1b-3c9f-49a7-bd9e-7972ea899d96/resourceGroups/aziz-resources/providers/Microsoft.Network/publicIPAddresses/aziz-ip",
            "idle_timeout_in_minutes": 4,
            "ip_address": "51.124.245.147",
            "ip_version": "IPv4",
            "location": "westeurope",
            "name": "aziz-ip",
            "resource_group_name": "aziz-resources",
            "sku": "Basic",
            "sku_tier": "Regional",
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.aziz-rg"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "aziz-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefixes": [
              "10.123.1.0/24"
            ],
            "enforce_private_link_endpoint_network_policies": false,
            "enforce_private_link_service_network_policies": false,
            "id": "/subscriptions/8d068e1b-3c9f-49a7-bd9e-7972ea899d96/resourceGroups/aziz-resources/providers/Microsoft.Network/virtualNetworks/aziz-network/subnets/aziz-subnet",
            "name": "aziz-subnet",
            "resource_group_name": "aziz-resources",
            "virtual_network_name": "aziz-network"
          },
          "dependencies": [
            "azurerm_resource_group.aziz-rg",
            "azurerm_virtual_network.aziz-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet_network_security_group_association",
      "name": "aziz-sga",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/8d068e1b-3c9f-49a7-bd9e-7972ea899d96/resourceGroups/aziz-resources/providers/Microsoft.Network/virtualNetworks/aziz-network/subnets/aziz-subnet",
            "network_security_group_id": "/subscriptions/8d068e1b-3c9f-49a7-bd9e-7972ea899d96/resourceGroups/aziz-resources/providers/Microsoft.Network/networkSecurityGroups/aziz-sg",
            "subnet_id": "/subscriptions/8d068e1b-3c9f-49a7-bd9e-7972ea899d96/resourceGroups/aziz-resources/providers/Microsoft.Network/virtualNetworks/aziz-network/subnets/aziz-subnet"
          },
          "dependencies": [
            "azurerm_network_security_group.aziz-sg",
            "azurerm_resource_group.aziz-rg",
            "azurerm_subnet.aziz-subnet",
            "azurerm_virtual_network.aziz-vn"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "aziz-vn",
      "provider": "provider[\"registry.terraform.io/hashicorp/azurerm\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "10.123.0.0/16"
            ],
            "flow_timeout_in_minutes": 0,
            "guid": "ffd1c7cc-fdd0-433c-9652-3a6a0bfcc44a",
            "id": "/subscriptions/8d068e1b-3c9f-49a7-bd9e-7972ea899d96/resourceGroups/aziz-resources/providers/Microsoft.Network/virtualNetworks/aziz-network",
            "location": "westeurope",
            "name": "aziz-network",
            "resource_group_name": "aziz-resources",
            "subnet": [
              {
                "address_prefix": "10.123.1.0/24",
                "id": "/subscriptions/8d068e1b-3c9f-49a7-bd9e-7972ea899d96/resourceGroups/aziz-resources/providers/Microsoft.Network/virtualNetworks/aziz-network/subnets/aziz-subnet",
                "name": "aziz-subnet",
                "security_group": "/subscriptions/8d068e1b-3c9f-49a7-bd9e-7972ea899d96/resourceGroups/aziz-resources/providers/Microsoft.Network/networkSecurityGroups/aziz-sg"
              }
            ],
            "tags": {
              "environment": "dev"
            }
          },
          "dependencies": [
            "azurerm_resource_group.aziz-rg"
          ]
        }
      ]
    }
  ]
}